<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="configure_intro">Images Widget Configuration</string>
    <string name="app_name">ImagesWidget</string>
<string name="configure_update">Update Time</string>
<string name="udpate_rate_hint">value in seconds</string>
<string name="save_config">Save</string>
<string name="feed_url_hint">http://domain.com/feed.rss</string>
<string name="configure_feed_url">Feed URL</string>
</resources>
